--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "parcel-app",
+  "name": "deep-creek",
+  "version": "1.0.0",
+  "description": "",
   "private": true,
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.0.0"
+    "parcel": "^2.8.0",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.0",
+    "tailwindcss": "^3.2.4"
   }
 }
