--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "deep-creek",
-  "version": "1.0.0",
-  "description": "",
+  "name": "deep-creek-disco",
   "private": true,
-  "source": "src/index.html",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.8.0",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.0",
-    "tailwindcss": "^3.2.4"
-  },
-  "dependencies": {}
+    "vite": "^4.2.0"
+  }
 }
