--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15"
